# buffon-needle

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
include/color/: color.h
include/editor/: editor.h
include/position/: position.h
include/shader/: shader.h
include/simulation/: simulation.h
include/stick/: stick.h  stickfactory.h
include/window/: window.h
shaders/: stick.frag  stick.vert
src/: main.cpp
src/color/: color.cpp
src/editor/: editor.cpp
src/position/: position.cpp
src/shader/: shader.cpp
src/simulation/: simulation.cpp
src/stick/: stick.cpp  stickfactory.cpp
src/window/: window.cpp
